<resources>
    <string name="app_name">Cha(d)t</string>
    <string name="enterNick">Email or Phone Number</string>
    <string name="enterPassword">Password</string>
    <string name="authorizationText">Continue</string>
    <string name="registrationText">Sign-Up</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="refresh">Refresh</string>
    <string name="enterText">Message</string>
    <string name="joinGeneralChat">Enter General Chat</string>
    <string name="generalChat">General Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>