<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/rfshscrllvw"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/rfrsh"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:id="@+id/rfrshlt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rfrsh">

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/rfrsh"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/xt"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/dimGray"
            android:text="@string/refresh"
            android:textColor="@color/lightGrey"
            android:textSize="11sp"/>

        <Button
            android:id="@+id/xt"
            android:textSize="11sp"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/sttngs"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/dimGray"
            android:text="@string/exit"
            android:textColor="@color/lightGrey" />

        <Button
            android:id="@+id/sttngs"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/dimGray"
            android:text="@string/settings"
            android:textColor="@color/lightGrey"
            android:textSize="11sp" />

        <Button

            android:id="@+id/jncht"
            android:textSize="11sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="135dp"
            android:backgroundTint="@color/dimGray"
            android:ems="10"
            android:text="@string/joinGeneralChat"
            android:textColor="@color/white" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>