<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue">

    <Button
        android:id="@+id/BackFromReg"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darkBlue"
        android:textColor="@color/lightGrey"
        app:icon="?attr/actionModeCloseDrawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:password="true"
        android:id="@+id/pass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/dimGray2"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        android:hint="@string/enterPassword"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/lightGrey"
        android:textColorHint="@color/lightGrey"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/registr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.523"
        tools:ignore="Deprecated"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/registr"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dimGray"
        android:text="@string/registrationText"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/dimGray2"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        android:ems="10"
        android:hint="@string/enterNick"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/lightGrey"
        android:textColorHint="@color/lightGrey"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/registr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724" />

</androidx.constraintlayout.widget.ConstraintLayout>